# qa-python-engineer-task

./: .pre-commit-config.yaml  README.md
config-resolver/: DECISIONS.md  Dockerfile  README.md  pyproject.toml
config-resolver/config_resolver/: main.py  models.py
config-resolver/config_resolver/configs/: base.py
config-resolver/config_resolver/profiles/: api.py  base.py  common.py  exceptions.py  json_file.py
config-resolver/tests/: conftest.py  test_api_profile.py  test_base_config.py  test_common.py  test_json_file.py
config-resolver/tests/fixtures/: sample_config.json
task-executor/: DECISIONS.md  Dockerfile  README.md  pyproject.toml
task-executor/task_executor/: async_executor.py  executor.py  main.py
